# som-rs

./: .gitlab-ci.yml  Cargo.toml  benchmarks.ipynb  build-lbits.sh  build-std.sh  index.html  log.sh  log.txt  rebench.conf  tech.md  valbench.sh
ValBenchmark/: DoubleBench.som  DoubleHighBench.som  DoubleLExpBench.som  DoubleMedBench.som  DoubleSqrtBench.som  IntegerBench.som  IntegerBigBench.som  IntegerExpBench.som  IntegerHighBench.som  IntegerMedBench.som  ValBenchmark.md
benchmarks/: bench.py  envbyenv_comparaison.py  envbyenv_comparaison_compared_to_baseline.py  ibench.py  ibench_only_active.py  requirements.txt
benchmarks/output3-with-tinystr/: general_bench.txt
benchmarks/output3-without-tinystr/: general_bench_without_tinystr.txt
benchmarks/output4-with-tinystr/: general_bench.txt  summary.txt
benchmarks/output4-without-tinystr/: general_bench.txt
benchmarks/output5-with-safe-tinystr/: summary.txt
benchmarks/output7552-with-safe-tinystr/: summary.txt
benchmarks/output7_5527-without-tinystr/: summary.txt
benchmarks/output7_5527-without-tinystr-micro-macro/: summary.txt
benchmarks/output7_5527-without-tinystr-micro-macro_v2/: summary.txt
benchmarks/output7_5527-without-tinystr-specific/: summary.txt
benchmarks/output7_5527-without-tinystr-specific_v2/: summary.txt
benchmarks/output7_5527-without-tinystr_v2/: summary.txt
benchmarks/output7_5552-with-safe-tinystr/: summary.txt
benchmarks/output7_5552-with-safe-tinystr-micro-macro/: summary.txt
benchmarks/output7_5552-with-safe-tinystr-micro-macro_v2/: summary.txt
benchmarks/output7_5552-with-safe-tinystr-specific/: summary.txt
benchmarks/output7_5552-with-safe-tinystr-specific_v2/: summary.txt
benchmarks/output7_5552-with-safe-tinystr_v2/: summary.txt
g-bench/: Cargo.toml
g-bench/benches/: bench_base_value.rs
lbits-bench/: Cargo.toml
nan-bench/: Cargo.toml
nan-bench/benches/: bench_base_value.rs
scripts/: run_benchmarks.sh  run_tests.sh
som-gc/: Cargo.toml
som-gc/src/: gc_interface.rs  (+1 more)
som-interpreter-bc/: Cargo.toml
som-value/: Cargo.toml
som-value-lbits/: Cargo.toml
som-value/src/: convert.rs  interned.rs  lib.rs  value.rs  value_ptr.rs
som-value/src/l3bits/: value.rs  value_ptr.rs
som-value/src/l4bits/: lib.rs  value.rs
som-value/src/lbits/: lib.rs  mod.rs  value.rs  value_ptr.rs
som-value/src/nan/: lib.rs  value.rs
val-bench/: Cargo.toml
val-bench/benches/: bench_base_value.rs
(+2500 files in other folders)
